2015-07-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (find_node_from_tag) <resetting tag table>: Don't
	forget that tags for anchors refer to anchors.  Report from
	Eli Zaretskii.

2015-07-18  Eli Zaretskii  <eliz@gnu.org>

	* info/nodes.c (find_node_from_tag, info_node_of_tag): Use
	FILENAME_CMP to compare file names.

2015-07-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_find_file): If filename has slash, look for
	it in search path if it does not begin "./".
	* info/filesys.c (info_find_fullpath): Don't look for a filename 
	beginning "./" in the search path, but otherwise look for the 
	filename in the search path even if it contains a slash.
	(info_file_find_next_in_path): Prefix returned path with "./" if 
	it is relative to the current directory.
	(info_add_extension): Allow second argument to be null.

	* info/info.c (main) <--file or slash in argument>: If argument 
	not an absolute path, prefix it with "./".  Call 
	info_add_extension instead of info_find_fullpath for arguments 
	other than simple filenames.

2015-07-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/dir-entry-to-subdir.sh: New test.

2015-07-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/window-split-dir.sh: Check exit status of grep.

2015-07-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/xref-to-anchor.sh: New test.

2015-07-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_node_contents): Always set 
	nodestart_adjusted for anchors in a node, whether rewriting the 
	node's contents or not.  Failure to follow a cross-reference to 
	an anchor reported by Ludovic Courtes.

2015-07-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (TAG): New field "cache".  Remove nodelen field.  
	All uses of TAG.nodelen changed to use TAG.cache.nodelen.
	* info/nodes.c (info_node_of_tag): Save information about node,
	like contents and reference list, in cache field.